Add configurable base directory support

--- a/views/archive/layout.hbs
+++ b/views/archive/layout.hbs
@@ -8,20 +8,20 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="{{#translate}}Self hosted email newsletter app{{/translate}}">
     <meta name="author" content="Andris Reinman">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="{{baseDir}}/favicon.ico">
 
     <title>Mailtrain</title>
 
     <!-- Bootstrap core CSS -->
     <!--
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{baseDir}}/bootstrap/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     -->
 
     <!-- -->
-    <link rel="stylesheet" href="/bootstrap/themes/flatly.min.css" integrity="sha384-GtWr4mgKIG0HYWHu8/xcLo4DnouVrY7hPd7ZH6T3dobUR8XyHwF1VFWZ1yOVT8wi" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{baseDir}}/bootstrap/themes/flatly.min.css" integrity="sha384-GtWr4mgKIG0HYWHu8/xcLo4DnouVrY7hPd7ZH6T3dobUR8XyHwF1VFWZ1yOVT8wi" crossorigin="anonymous">
     <!-- -->
 
-    <link rel="stylesheet" href="/css/narrow.css">
+    <link rel="stylesheet" href="{{baseDir}}/css/narrow.css">
 
 </head>
 
@@ -37,8 +37,8 @@
 
     </div>
 
-    <script src="/javascript/jquery-2.2.1.min.js" integrity="sha384-8C+3bW/ArbXinsJduAjm9O7WNnuOcO+Bok/VScRYikawtvz4ZPrpXtGfKIewM9dK" crossorigin="anonymous"></script>
-    <script src="/bootstrap/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="{{baseDir}}/javascript/jquery-2.2.1.min.js" integrity="sha384-8C+3bW/ArbXinsJduAjm9O7WNnuOcO+Bok/VScRYikawtvz4ZPrpXtGfKIewM9dK" crossorigin="anonymous"></script>
+    <script src="{{baseDir}}/bootstrap/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
     {{> tracking_scripts}}
