--- a/views/grapejs/editor.hbs
+++ b/views/grapejs/editor.hbs
@@ -65,7 +65,7 @@
 
 <!-- Test Newsletter Form -->
 
-<form id="test-form" class="test-form" action="/editorapi/test?editor=grapejs" method="post" style="display: none">
+<form id="test-form" class="test-form" action="{{baseDir}}/editorapi/test?editor=grapejs" method="post" style="display: none">
     <div class="putsmail-c">
         <div class="gjs-sm-property" style="font-size: 10px">
             Hello! I'm a placerholder message.
