--- a/views/lists/create.hbs
+++ b/views/lists/create.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/lists/">{{#translate}}Lists{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/">{{#translate}}Lists{{/translate}}</a></li>
     <li class="active">{{#translate}}Create List{{/translate}}</li>
 </ol>
 
@@ -8,7 +8,7 @@
 
 <hr>
 
-<form class="form-horizontal" method="post" action="/lists/create">
+<form class="form-horizontal" method="post" action="{{baseDir}}/lists/create">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">{{#translate}}Name{{/translate}}</label>
