--- a/views/partials/editor-navbar.hbs
+++ b/views/partials/editor-navbar.hbs
@@ -38,7 +38,7 @@
 </style>
 
 <div id="mt-navbar">
-    <img class="mt-logo" src="/mailtrain-header.png">
+    <img class="mt-logo" src="{{baseDir}}/mailtrain-header.png">
     <a id="mt-close" class="mt-btn">{{#translate}}CLOSE{{/translate}}</a>
     <a id="mt-save" class="mt-btn"><span></span></a>
 </div>
