--- a/views/reports/reports.hbs
+++ b/views/reports/reports.hbs
@@ -1,12 +1,12 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
     <li class="active">{{#translate}}Reports{{/translate}}</li>
 </ol>
 
 <div class="pull-right">
-    <a class="btn btn-primary" href="/reports/create" role="button"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create Report{{/translate}}</a>
+    <a class="btn btn-primary" href="{{baseDir}}/reports/create" role="button"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create Report{{/translate}}</a>
 
-    <a class="btn btn-primary" href="/report-templates" role="button">{{#translate}}Report Templates{{/translate}}</a>
+    <a class="btn btn-primary" href="{{baseDir}}/report-templates" role="button">{{#translate}}Report Templates{{/translate}}</a>
 </div>
 
 <h2>{{#translate}}Reports{{/translate}}</h2>
@@ -14,7 +14,7 @@
 <hr>
 
 <div class="table-responsive">
-    <table data-topic-url="/reports" data-sort-column="2" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,1,0,1,0">
+    <table data-topic-url="{{baseDir}}/reports" data-sort-column="2" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,1,0,1,0">
         <thead>
         <th style="width: 1%">
             #
