--- a/views/subscription/partials/subscription-unsubscribe-form.hbs
+++ b/views/subscription/partials/subscription-unsubscribe-form.hbs
@@ -1,4 +1,4 @@
-<form method="post" id="main-form" action="/subscription/{{lcid}}/unsubscribe">
+<form method="post" id="main-form" action="{{baseDir}}/subscription/{{lcid}}/unsubscribe">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="campaign" value="{{campaign}}">
     <input type="hidden" name="ucid" value="{{ucid}}">
