--- a/views/subscription/web-manage.mjml.hbs
+++ b/views/subscription/web-manage.mjml.hbs
@@ -10,7 +10,7 @@
             {{#translate}}Update Profile{{/translate}}
         </mj-button>
         <mj-text mj-class="p">
-            <a href="/subscription/{{lcid}}/unsubscribe/{{cid}}">{{#translate}}Unsubscribe{{/translate}}</a>
+            <a href="{{baseDir}}/subscription/{{lcid}}/unsubscribe/{{cid}}">{{#translate}}Unsubscribe{{/translate}}</a>
         </mj-text>
     </mj-column>
 </mj-section>
