--- a/views/blacklist.hbs
+++ b/views/blacklist.hbs
@@ -1,11 +1,11 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
     <li class="active">{{#translate}}Blacklist{{/translate}}</li>
 </ol>
 
 <h2>{{#translate}}Blacklist{{/translate}}</h2>
 
-<form class="form-horizontal" method="post" action="/blacklist/ajax/add">
+<form class="form-horizontal" method="post" action="{{baseDir}}/blacklist/ajax/add">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="next" value="/blacklist">
     <div class="form-group">
@@ -17,7 +17,7 @@
     <p class="help-block">A blacklisted email address will not receive messages from any campaign. The blacklist does not apply to transactional messages.</p>
 </form>
 
-<form class="form-horizontal" id="delete-email-form" method="post" action="/blacklist/ajax/delete">
+<form class="form-horizontal" id="delete-email-form" method="post" action="{{baseDir}}/blacklist/ajax/delete">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="next" value="/blacklist">
     <input type="hidden" name="email" id="delete-email-input" value="">
@@ -25,7 +25,7 @@
 
 <hr>
 <div class="table-responsive">
-    <table data-topic-url="/blacklist" data-sort-column="1" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,0">
+    <table data-topic-url="{{baseDir}}/blacklist" data-sort-column="1" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,0">
         <thead>
             <th class="col-md-1">
                 #
