--- a/views/campaigns/campaigns.hbs
+++ b/views/campaigns/campaigns.hbs
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
     <li class="active">{{#translate}}Campaigns{{/translate}}</li>
 </ol>
 
@@ -9,9 +9,9 @@
             {{#translate}}Create Campaign{{/translate}} <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a href="/campaigns/create"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Regular Campaign{{/translate}}</a></li>
-            <li><a href="/campaigns/create?type=rss"><i class="glyphicon glyphicon-signal"></i> {{#translate}}RSS Campaign{{/translate}}</a></li>
-            <li><a href="/campaigns/create?type=triggered"><i class="glyphicon glyphicon-console"></i> {{#translate}}Triggered Campaign{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/campaigns/create"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Regular Campaign{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/campaigns/create?type=rss"><i class="glyphicon glyphicon-signal"></i> {{#translate}}RSS Campaign{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/campaigns/create?type=triggered"><i class="glyphicon glyphicon-console"></i> {{#translate}}Triggered Campaign{{/translate}}</a></li>
         </ul>
     </div>
 </div>
@@ -21,7 +21,7 @@
 <hr>
 
 <div class="table-responsive">
-    <table data-topic-url="/campaigns" data-sort-column="4" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,0,1,1,0">
+    <table data-topic-url="{{baseDir}}/campaigns" data-sort-column="4" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,0,1,1,0">
         <thead>
             <th style="width: 1%">
                 #
