--- a/views/campaigns/create-rss.hbs
+++ b/views/campaigns/create-rss.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/campaigns">{{#translate}}Campaigns{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/campaigns">{{#translate}}Campaigns{{/translate}}</a></li>
     <li class="active">{{#translate}}Create RSS Campaign{{/translate}}</li>
 </ol>
 
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<form class="form-horizontal" method="post" action="/campaigns/create">
+<form class="form-horizontal" method="post" action="{{baseDir}}/campaigns/create">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="type" value="rss">
 
