--- a/views/campaigns/view.hbs
+++ b/views/campaigns/view.hbs
@@ -1,14 +1,14 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/campaigns">{{#translate}}Campaigns{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/campaigns">{{#translate}}Campaigns{{/translate}}</a></li>
     {{#if parent}}
-        <li><a href="/campaigns/view/{{parent.id}}">{{parent.name}}</a></li>
+        <li><a href="{{baseDir}}/campaigns/view/{{parent.id}}">{{parent.name}}</a></li>
     {{/if}}
     <li class="active">{{name}}</li>
 </ol>
 
 <div class="pull-right">
-    <a class="btn btn-primary" href="/campaigns/edit/{{id}}" role="button"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> {{#translate}}Edit Campaign{{/translate}}</a>
+    <a class="btn btn-primary" href="{{baseDir}}/campaigns/edit/{{id}}" role="button"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> {{#translate}}Edit Campaign{{/translate}}</a>
 </div>
 
 <h2><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> {{name}}</h2>
@@ -37,9 +37,9 @@
                 <dt>{{#translate}}List{{/translate}}</dt>
                 <dd>
                     {{#if segment}}
-                        <a href="/lists/view/{{list.id}}?segment={{segment.id}}">{{list.name}}: {{segment.name}}</a>
+                        <a href="{{baseDir}}/lists/view/{{list.id}}?segment={{segment.id}}">{{list.name}}: {{segment.name}}</a>
                     {{else}}
-                        <a href="/lists/view/{{list.id}}">{{list.name}}</a>
+                        <a href="{{baseDir}}/lists/view/{{list.id}}">{{list.name}}</a>
                     {{/if}}
                 </dd>
 
@@ -92,7 +92,7 @@
 
                 <dt>{{#translate}}Preview campaign as{{/translate}}</dt>
                 <dd>
-                    <form method="post" action="/campaigns/preview/{{id}}" class="form-inline">
+                    <form method="post" action="{{baseDir}}/campaigns/preview/{{id}}" class="form-inline">
                         <input type="hidden" name="_csrf" value="{{csrfToken}}">
                         <input type="hidden" name="campaign" value="{{cid}}">
                         <input type="hidden" name="list" value="{{list.cid}}">
@@ -123,21 +123,21 @@
         <dl class="dl-horizontal">
             {{#unless isIdling}}
 
-                <dt>{{#translate}}Delivered{{/translate}} <a href="/campaigns/status/{{id}}/delivered" title="{{#translate}}List subscribers who received this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                <dt>{{#translate}}Delivered{{/translate}} <a href="{{baseDir}}/campaigns/status/{{id}}/delivered" title="{{#translate}}List subscribers who received this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                 <dd>
                     <div style="margin-bottom: 20px;">
                         {{delivered}}
                     </div>
                 </dd>
 
-                <dt>{{#translate}}Blacklisted{{/translate}} <a href="/campaigns/status/{{id}}/blacklisted" title="{{#translate}}List subscribers who blacklisted by global blacklist{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                <dt>{{#translate}}Blacklisted{{/translate}} <a href="{{baseDir}}/campaigns/status/{{id}}/blacklisted" title="{{#translate}}List subscribers who blacklisted by global blacklist{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                 <dd>
                     <div style="margin-bottom: 20px;">
                         {{blacklisted}}
                     </div>
                 </dd>
 
-                <dt>{{#translate}}Bounced{{/translate}} <a href="/campaigns/status/{{id}}/bounced" title="{{#translate}}List subscribers who bounced{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                <dt>{{#translate}}Bounced{{/translate}} <a href="{{baseDir}}/campaigns/status/{{id}}/bounced" title="{{#translate}}List subscribers who bounced{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                 <dd>
                     <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{bounceRate}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 6em; width: {{bounceRate}}%;">
@@ -146,7 +146,7 @@
                     </div>
                 </dd>
 
-                <dt>{{#translate}}Complaints{{/translate}} <a href="/campaigns/status/{{id}}/complained" title="{{#translate}}List subscribers who complained for this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                <dt>{{#translate}}Complaints{{/translate}} <a href="{{baseDir}}/campaigns/status/{{id}}/complained" title="{{#translate}}List subscribers who complained for this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                 <dd>
                     <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="{{complaintRate}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 6em; width: {{complaintRate}}%;">
@@ -155,7 +155,7 @@
                     </div>
                 </dd>
 
-                <dt>{{#translate}}Unsubscribed{{/translate}} <a href="/campaigns/status/{{id}}/unsubscribed" title="{{#translate}}List subscribers who unsubscribed after this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                <dt>{{#translate}}Unsubscribed{{/translate}} <a href="{{baseDir}}/campaigns/status/{{id}}/unsubscribed" title="{{#translate}}List subscribers who unsubscribed after this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                 <dd>
                     <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="{{unsubscribeRate}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 6em; width: {{unsubscribeRate}}%;">
@@ -166,7 +166,7 @@
 
                 {{#unless openTrackingDisabled}}
 
-                    <dt>{{#translate}}Opened{{/translate}} <a href="/campaigns/opened/{{id}}" title="{{#translate}}List subscribers who opened this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                    <dt>{{#translate}}Opened{{/translate}} <a href="{{baseDir}}/campaigns/opened/{{id}}" title="{{#translate}}List subscribers who opened this message{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                     <dd>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{openRate}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 6em; width: {{openRate}}%;">
@@ -176,7 +176,7 @@
                     </dd>
                 {{/unless}}
                 {{#unless clickTrackingDisabled}}
-                    <dt>{{#translate}}Clicked{{/translate}} <a href="/campaigns/clicked/{{id}}/all" title="{{#translate}}List subscribers who clicked on a link{{/translate}}"> <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
+                    <dt>{{#translate}}Clicked{{/translate}} <a href="{{baseDir}}/campaigns/clicked/{{id}}/all" title="{{#translate}}List subscribers who clicked on a link{{/translate}}"> <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></dt>
                     <dd>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{clicksRate}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 6em; width: {{clicksRate}}%;">
@@ -194,7 +194,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     {{#if isIdling}}
-                        <form class="form-inline confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would start sending messages to the selected list{{/translate}}" method="post" action="/campaigns/send">
+                        <form class="form-inline confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would start sending messages to the selected list{{/translate}}" method="post" action="{{baseDir}}/campaigns/send">
                             <input type="hidden" name="_csrf" value="{{csrfToken}}">
                             <input type="hidden" name="id" value="{{id}}" />
 
@@ -230,7 +230,7 @@
                         <div class="page-refresh" data-interval="20"></div>
                         {{#if isScheduled}}
                             <div class="pull-right">
-                                <form class="form-horizontal confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would reset scheduling{{/translate}}" method="post" action="/campaigns/reset">
+                                <form class="form-horizontal confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would reset scheduling{{/translate}}" method="post" action="{{baseDir}}/campaigns/reset">
                                     <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                     <input type="hidden" name="id" value="{{id}}" />
 
@@ -241,7 +241,7 @@
                             <h4>{{#translate}}Sending scheduled{{/translate}} <span class="datestring text-info" data-date="{{scheduled}}" title="{{scheduled}}">{{scheduled}}</span></h4>
                         {{else}}
                             <div class="pull-right">
-                                <form class="form-horizontal" method="post" action="/campaigns/pause">
+                                <form class="form-horizontal" method="post" action="{{baseDir}}/campaigns/pause">
                                     <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                     <input type="hidden" name="id" value="{{id}}" />
 
@@ -255,12 +255,12 @@
 
                     {{#if isPaused}}
                         <div class="pull-right">
-                            <form id="resume-sending" class="form-horizontal confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would resume sending messages to the selected list{{/translate}}" method="post" action="/campaigns/resume">
+                            <form id="resume-sending" class="form-horizontal confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would resume sending messages to the selected list{{/translate}}" method="post" action="{{baseDir}}/campaigns/resume">
                                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                 <input type="hidden" name="id" value="{{id}}" />
                             </form>
 
-                            <form id="reset-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would reset all stats about current progress{{/translate}}" method="post" action="/campaigns/reset">
+                            <form id="reset-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would reset all stats about current progress{{/translate}}" method="post" action="{{baseDir}}/campaigns/reset">
                                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                 <input type="hidden" name="id" value="{{id}}" />
                             </form>
@@ -276,12 +276,12 @@
 
                     {{#if isFinished}}
                         <div class="pull-right">
-                            <form id="continue-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would resume sending messages to the selected list{{/translate}}" method="post" action="/campaigns/send">
+                            <form id="continue-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would resume sending messages to the selected list{{/translate}}" method="post" action="{{baseDir}}/campaigns/send">
                                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                 <input type="hidden" name="id" value="{{id}}" />
                             </form>
 
-                            <form id="reset-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would reset all stats about current progress{{/translate}}" method="post" action="/campaigns/reset">
+                            <form id="reset-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would reset all stats about current progress{{/translate}}" method="post" action="{{baseDir}}/campaigns/reset">
                                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                 <input type="hidden" name="id" value="{{id}}" />
                             </form>
@@ -306,7 +306,7 @@
                 <div class="panel-body">
                     {{#if isActive}}
                         <div class="pull-right">
-                            <form id="inactivate-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would pause sending new entries in RSS feed as email messages to the selected list{{/translate}}" method="post" action="/campaigns/inactivate">
+                            <form id="inactivate-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would pause sending new entries in RSS feed as email messages to the selected list{{/translate}}" method="post" action="{{baseDir}}/campaigns/inactivate">
                                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                 <input type="hidden" name="id" value="{{id}}" />
                             </form>
@@ -318,7 +318,7 @@
                         {{#translate}}Campaign status:{{/translate}} <span class="label label-primary">{{#translate}}ACTIVE{{/translate}}</span>
                     {{else}}
                         <div class="pull-right">
-                            <form id="activate-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would start sending new entries in RSS feed as email messages to the selected list{{/translate}}" method="post" action="/campaigns/activate">
+                            <form id="activate-sending" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action would start sending new entries in RSS feed as email messages to the selected list{{/translate}}" method="post" action="{{baseDir}}/campaigns/activate">
                                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                 <input type="hidden" name="id" value="{{id}}" />
                             </form>
@@ -336,7 +336,7 @@
         {{#if isTriggered}}
             <div class="panel panel-default">
                 <div class="panel-body">
-                    {{#translate}}This is a triggered campaign. Messages are only sent to subscribers that hit some trigger that invokes this campaign{{/translate}} (<a href="/triggers">{{#translate}}see more{{/translate}}</a>)
+                    {{#translate}}This is a triggered campaign. Messages are only sent to subscribers that hit some trigger that invokes this campaign{{/translate}} (<a href="{{baseDir}}/triggers">{{#translate}}see more{{/translate}}</a>)
                 </div>
             </div>
         {{/if}}
@@ -379,7 +379,7 @@
                                         </td>
                                         <td>
                                             <div class="pull-right">
-                                                <a href="/campaigns/clicked/{{../id}}/{{id}}" title="{{#translate}}List subscribers who clicked this link{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                                                <a href="{{baseDir}}/campaigns/clicked/{{../id}}/{{id}}" title="{{#translate}}List subscribers who clicked this link{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
                                             </div>
                                             {{clicks}}
                                         </td>
@@ -407,7 +407,7 @@
                                 </th>
                                 <th>
                                     <div class="pull-right">
-                                        <a href="/campaigns/clicked/{{id}}/all" title="{{#translate}}List subscribers who clicked on a link{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                                        <a href="{{baseDir}}/campaigns/clicked/{{id}}/all" title="{{#translate}}List subscribers who clicked on a link{{/translate}}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
                                     </div>
                                     {{clicks}}
                                 </th>
@@ -437,7 +437,7 @@
         <div class="well text-info">
             {{#translate}}If a new entry is found from campaign feed a new subcampaign is created of that entry and it will be listed here{{/translate}}
         </div>
-        <table data-topic-url="/campaigns" data-sort-column="4" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" data-topic-args="parent={{id}}" width="100%" data-row-sort="0,1,0,1,1,0">
+        <table data-topic-url="{{baseDir}}/campaigns" data-sort-column="4" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" data-topic-args="parent={{id}}" width="100%" data-row-sort="0,1,0,1,1,0">
             <thead>
                 <th class="col-md-1">
                     #
