--- a/views/lists/fields/edit.hbs
+++ b/views/lists/fields/edit.hbs
@@ -1,21 +1,21 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/lists/">{{#translate}}Lists{{/translate}}</a></li>
-    <li><a href="/lists/view/{{list.id}}">{{list.name}}</a></li>
-    <li><a href="/fields/{{list.id}}">{{#translate}}Custom Fields{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/">{{#translate}}Lists{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/view/{{list.id}}">{{list.name}}</a></li>
+    <li><a href="{{baseDir}}/fields/{{list.id}}">{{#translate}}Custom Fields{{/translate}}</a></li>
     <li class="active">{{#translate}}Edit Field{{/translate}}</li>
 </ol>
 
-<h2>{{list.name}} <small>{{#translate}}Edit Custom Field{{/translate}}</small> <a class="btn btn-default btn-xs" href="/fields/{{list.id}}" role="button"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> {{#translate}}Back to fields{{/translate}}</a></h2>
+<h2>{{list.name}} <small>{{#translate}}Edit Custom Field{{/translate}}</small> <a class="btn btn-default btn-xs" href="{{baseDir}}/fields/{{list.id}}" role="button"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> {{#translate}}Back to fields{{/translate}}</a></h2>
 
 <hr>
 
-<form method="post" class="delete-form" id="fields-delete" action="/fields/{{list.id}}/delete">
+<form method="post" class="delete-form" id="fields-delete" action="{{baseDir}}/fields/{{list.id}}/delete">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{field.id}}" />
 </form>
 
-<form class="form-horizontal" method="post" action="/fields/{{list.id}}/edit">
+<form class="form-horizontal" method="post" action="{{baseDir}}/fields/{{list.id}}/edit">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{field.id}}" />
 
