--- a/views/lists/lists.hbs
+++ b/views/lists/lists.hbs
@@ -1,10 +1,10 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
     <li class="active">{{#translate}}Lists{{/translate}}</li>
 </ol>
 
 <div class="pull-right">
-    <a class="btn btn-primary" href="/lists/create" role="button"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create List{{/translate}}</a>
+    <a class="btn btn-primary" href="{{baseDir}}/lists/create" role="button"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create List{{/translate}}</a>
 </div>
 
 <h2>{{#translate}}Lists{{/translate}}</h2>
@@ -12,7 +12,7 @@
 <hr>
 
 <div class="table-responsive">
-    <table data-topic-url="/lists" data-sort-column="1" data-sort-order="asc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,1,1,0,0">
+    <table data-topic-url="{{baseDir}}/lists" data-sort-column="1" data-sort-order="asc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,1,1,0,0">
         <thead>
         <th style="width: 1%">
             #
