--- a/views/lists/segments/rule-create.hbs
+++ b/views/lists/segments/rule-create.hbs
@@ -1,9 +1,9 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/lists/">{{#translate}}Lists{{/translate}}</a></li>
-    <li><a href="/lists/view/{{list.id}}">{{list.name}}</a></li>
-    <li><a href="/segments/{{list.id}}">{{#translate}}Segments{{/translate}}</a></li>
-    <li><a href="/segments/{{list.id}}/view/{{id}}">{{name}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/">{{#translate}}Lists{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/view/{{list.id}}">{{list.name}}</a></li>
+    <li><a href="{{baseDir}}/segments/{{list.id}}">{{#translate}}Segments{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/segments/{{list.id}}/view/{{id}}">{{name}}</a></li>
     <li class="active">{{#translate}}Create Segment{{/translate}}</li>
 </ol>
 
@@ -11,7 +11,7 @@
 
 <hr>
 
-<form class="form-horizontal" method="post" action="/segments/{{list.id}}/rules/{{id}}/next">
+<form class="form-horizontal" method="post" action="{{baseDir}}/segments/{{list.id}}/rules/{{id}}/next">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
 
     <div class="form-group">
