--- a/views/lists/segments/view.hbs
+++ b/views/lists/segments/view.hbs
@@ -1,13 +1,13 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/lists/">{{#translate}}Lists{{/translate}}</a></li>
-    <li><a href="/lists/view/{{list.id}}">{{list.name}}</a></li>
-    <li><a href="/segments/{{list.id}}">{{#translate}}Segments{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/">{{#translate}}Lists{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/view/{{list.id}}">{{list.name}}</a></li>
+    <li><a href="{{baseDir}}/segments/{{list.id}}">{{#translate}}Segments{{/translate}}</a></li>
     <li class="active">{{name}}</li>
 </ol>
 
 <div class="pull-right">
-    <a class="btn btn-primary" href="/segments/{{list.id}}/rules/{{id}}/create" role="button"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create Rule{{/translate}}</a>
+    <a class="btn btn-primary" href="{{baseDir}}/segments/{{list.id}}/rules/{{id}}/create" role="button"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create Rule{{/translate}}</a>
 </div>
 
 <h2>{{list.name}} <small><span class="glyphicon glyphicon-filter" aria-hidden="true"></span> {{#translate}}Segment{{/translate}} {{name}}</small></h2>
@@ -16,11 +16,11 @@
 
 <div class="well well-sm">
     <div class="pull-right">
-        <a class="btn btn-primary btn-sm" href="/segments/{{list.id}}/edit/{{id}}" role="button"><i class="glyphicon glyphicon-wrench"></i> {{#translate}}Edit Segment{{/translate}}</a>
+        <a class="btn btn-primary btn-sm" href="{{baseDir}}/segments/{{list.id}}/edit/{{id}}" role="button"><i class="glyphicon glyphicon-wrench"></i> {{#translate}}Edit Segment{{/translate}}</a>
     </div>
     {{#translate}}Match rules{{/translate}}: <span class="label label-default">{{type}}</span>
     <br /> {{#translate}}Matching subscribers{{/translate}}: <span class="label label-default">{{subscribers}}</span> (
-    <a href="/lists/view/{{list.id}}?segment={{id}}">{{#translate}}show{{/translate}}</a>)
+    <a href="{{baseDir}}/lists/view/{{list.id}}?segment={{id}}">{{#translate}}show{{/translate}}</a>)
     <br />
     <div class="clearfix"></div>
 </div>
@@ -56,7 +56,7 @@
                         </td>
                         <td>
                             <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-                            <a href="/segments/{{../list.id}}/rules/{{../id}}/edit/{{id}}">
+                            <a href="{{baseDir}}/segments/{{../list.id}}/rules/{{../id}}/edit/{{id}}">
                             {{#translate}}Edit{{/translate}}
                         </a>
                         </td>
