--- a/views/lists/view.hbs
+++ b/views/lists/view.hbs
@@ -1,26 +1,26 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/lists/">{{#translate}}Lists{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/lists/">{{#translate}}Lists{{/translate}}</a></li>
     <li class="active">{{name}}</li>
 </ol>
 
 <div class="pull-right">
 
-    <a class="btn btn-default" href="/subscription/{{cid}}" target="_blank" role="button"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> {{#translate}}Subscription Form{{/translate}}</a>
+    <a class="btn btn-default" href="{{baseDir}}/subscription/{{cid}}" target="_blank" role="button"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> {{#translate}}Subscription Form{{/translate}}</a>
 
     <div class="btn-group">
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             {{#translate}}List Actions{{/translate}} <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a href="/forms/{{id}}" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{#translate}}Custom Forms{{/translate}}</a></li>
-            <li><a href="/fields/{{id}}" role="button"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> {{#translate}}Custom Fields{{/translate}}</a></li>
-            <li><a href="/segments/{{id}}" role="button"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span> {{#translate}}Segments{{/translate}}</a></li>
-            <li><a href="/lists/edit/{{id}}" role="button"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> {{#translate}}Edit List{{/translate}}</a></li>
-            <li><a href="/triggers/{{id}}/create" role="button"><span class="glyphicon glyphicon-console" aria-hidden="true"></span> {{#translate}}Create Trigger{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/forms/{{id}}" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{#translate}}Custom Forms{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/fields/{{id}}" role="button"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> {{#translate}}Custom Fields{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/segments/{{id}}" role="button"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span> {{#translate}}Segments{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/lists/edit/{{id}}" role="button"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> {{#translate}}Edit List{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/triggers/{{id}}/create" role="button"><span class="glyphicon glyphicon-console" aria-hidden="true"></span> {{#translate}}Create Trigger{{/translate}}</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="/lists/subscription/{{id}}/add" role="button"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> {{#translate}}Add Subscriber{{/translate}}</a></li>
-            <li><a href="/lists/subscription/{{id}}/import" role="button"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> {{#translate}}Import Subscribers{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/lists/subscription/{{id}}/add" role="button"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> {{#translate}}Add Subscriber{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/lists/subscription/{{id}}/import" role="button"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> {{#translate}}Import Subscribers{{/translate}}</a></li>
         </ul>
     </div>
 </div>
@@ -36,7 +36,7 @@
 <div class="well well-sm">
     {{#if useSegment}}
         <div class="pull-right">
-            <a class="btn btn-primary btn-sm" href="/segments/{{id}}/edit/{{segment}}" role="button"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> {{#translate}}Edit Segment{{/translate}}</a>
+            <a class="btn btn-primary btn-sm" href="{{baseDir}}/segments/{{id}}/edit/{{segment}}" role="button"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> {{#translate}}Edit Segment{{/translate}}</a>
         </div>
     {{/if}}
     <form class="form-inline" method="get">
@@ -64,8 +64,8 @@
 
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="{{#if showSubscriptions}}active{{/if}}"><a href="/lists/view/{{id}}" aria-controls="subscriptions" role="tab">{{#translate}}Subscriptions{{/translate}}</a></li>
-    <li role="presentation" class="{{#if showImports}}active{{/if}}"><a href="/lists/view/{{id}}?tab=imports" aria-controls="imports" role="tab">{{#translate}}Imports{{/translate}}</a></li>
+    <li role="presentation" class="{{#if showSubscriptions}}active{{/if}}"><a href="{{baseDir}}/lists/view/{{id}}" aria-controls="subscriptions" role="tab">{{#translate}}Subscriptions{{/translate}}</a></li>
+    <li role="presentation" class="{{#if showImports}}active{{/if}}"><a href="{{baseDir}}/lists/view/{{id}}?tab=imports" aria-controls="imports" role="tab">{{#translate}}Imports{{/translate}}</a></li>
 </ul>
 
 <div class="tab-content">
@@ -74,7 +74,7 @@
             <p></p>
 
             <div class="table-responsive">
-                <table data-topic-url="/lists" data-topic-id="{{id}}" data-sort-column="1" data-sort-order="asc" {{#if useSegment}} data-topic-args="segment={{useSegment}}" {{/if}} class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,1,1{{customSort}},1,1,0">
+                <table data-topic-url="{{baseDir}}/lists" data-topic-id="{{id}}" data-sort-column="1" data-sort-order="asc" {{#if useSegment}} data-topic-args="segment={{useSegment}}" {{/if}} class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,1,1{{customSort}},1,1,0">
                     <thead>
                         <tr>
                             <th>
@@ -173,7 +173,7 @@
                                         {{updated}}
                                     </td>
                                     <td>
-                                        {{#if failed}}<a href="/lists/subscription/{{../id}}/import/{{id}}/failed">{{failed}}</a>{{else}}0 {{/if}}
+                                        {{#if failed}}<a href="{{baseDir}}/lists/subscription/{{../id}}/import/{{id}}/failed">{{failed}}</a>{{else}}0 {{/if}}
                                     </td>
                                     <td class="{{#if error}}text-danger{{/if}}">
                                         {{#if error}}
@@ -183,7 +183,7 @@
                                         {{/if}}
                                     </td>
                                     <td class="text-center">
-                                        <form method="post" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action should only be called to resolve stalled imports{{/translate}}" action="/lists/subscription/import-restart">
+                                        <form method="post" class="confirm-submit" data-confirm-message="{{#translate}}Are you sure? This action should only be called to resolve stalled imports{{/translate}}" action="{{baseDir}}/lists/subscription/import-restart">
                                             <input type="hidden" name="_csrf" value="{{../csrfToken}}">
                                             <input type="hidden" name="list" value="{{list}}">
                                             <input type="hidden" name="import" value="{{id}}">
