--- a/views/report-templates/report-templates.hbs
+++ b/views/report-templates/report-templates.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/reports">{{#translate}}Reports{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/reports">{{#translate}}Reports{{/translate}}</a></li>
     <li class="active">{{#translate}}Templates{{/translate}}</li>
 </ol>
 
@@ -10,10 +10,10 @@
             {{#translate}}Create Template{{/translate}} <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a href="/report-templates/create">{{#translate}}Blank{{/translate}}</a></li>
-            <li><a href="/report-templates/create?type=subscribers-all">{{#translate}}All Subscribers{{/translate}}</a></li>
-            <li><a href="/report-templates/create?type=subscribers-grouped">{{#translate}}Grouped Subscribers{{/translate}}</a></li>
-            <li><a href="/report-templates/create?type=export-list-csv">{{#translate}}Export List as CSV{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/report-templates/create">{{#translate}}Blank{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/report-templates/create?type=subscribers-all">{{#translate}}All Subscribers{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/report-templates/create?type=subscribers-grouped">{{#translate}}Grouped Subscribers{{/translate}}</a></li>
+            <li><a href="{{baseDir}}/report-templates/create?type=export-list-csv">{{#translate}}Export List as CSV{{/translate}}</a></li>
         </ul>
     </div>
 </div>
@@ -23,7 +23,7 @@
 <hr>
 
 <div class="table-responsive">
-    <table data-topic-url="/report-templates" data-sort-column="2" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,0,1,0">
+    <table data-topic-url="{{baseDir}}/report-templates" data-sort-column="2" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax display nowrap" width="100%" data-row-sort="0,1,0,1,0">
         <thead>
             <th class="col-md-1">
                 #
