--- a/views/reports/edit.hbs
+++ b/views/reports/edit.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/reports">{{#translate}}Reports{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/reports">{{#translate}}Reports{{/translate}}</a></li>
     <li class="active">{{#translate}}Edit Report{{/translate}}</li>
 </ol>
 
@@ -8,13 +8,13 @@
 
 <hr>
 
-<form method="post" class="delete-form" id="reports-delete" action="/reports/delete">
+<form method="post" class="delete-form" id="reports-delete" action="{{baseDir}}/reports/delete">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{id}}" />
 </form>
 
 
-<form class="form-horizontal" method="post" action="/reports/edit">
+<form class="form-horizontal" method="post" action="{{baseDir}}/reports/edit">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{id}}" />
 
