--- a/views/reports/partials/report-fields.hbs
+++ b/views/reports/partials/report-fields.hbs
@@ -22,7 +22,7 @@
                     <label for="description" class="col-sm-2 control-label">{{name}}</label>
                     <div class="col-sm-10">
                         <div class="table-responsive">
-                            <table data-topic-url="/campaigns/quicklist" data-sort-column="2" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax data-table-{{#if isMulti}}multi{{/if}}selectable display nowrap" width="100%" data-row-sort="0,1,0,1">
+                            <table data-topic-url="{{baseDir}}/campaigns/quicklist" data-sort-column="2" data-sort-order="desc" class="table table-bordered table-hover data-table-ajax data-table-{{#if isMulti}}multi{{/if}}selectable display nowrap" width="100%" data-row-sort="0,1,0,1">
                                 <thead>
                                 <th class="col-md-1">
                                     #
@@ -49,7 +49,7 @@
                     <label for="description" class="col-sm-2 control-label">{{name}}</label>
                     <div class="col-sm-10">
                         <div class="table-responsive">
-                            <table data-topic-url="/lists/quicklist" data-sort-column="2" data-sort-order="asc" class="table table-bordered table-hover data-table-ajax data-table-{{#if isMulti}}multi{{/if}}selectable display nowrap" width="100%" data-row-sort="0,1,1">
+                            <table data-topic-url="{{baseDir}}/lists/quicklist" data-sort-column="2" data-sort-order="asc" class="table table-bordered table-hover data-table-ajax data-table-{{#if isMulti}}multi{{/if}}selectable display nowrap" width="100%" data-row-sort="0,1,1">
                                 <thead>
                                 <th class="col-md-1">
                                     #
