--- a/views/reports/view.hbs
+++ b/views/reports/view.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/reports/">{{#translate}}Reports{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/reports/">{{#translate}}Reports{{/translate}}</a></li>
     <li class="active">{{title}}</li>
 </ol>
 
