--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
     <li class="active">{{#translate}}Settings{{/translate}}</li>
 </ol>
 
@@ -7,11 +7,11 @@
 
 <hr>
 
-<form method="post" id="smtp-verify" action="/settings/smtp-verify">
+<form method="post" id="smtp-verify" action="{{baseDir}}/settings/smtp-verify">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
 </form>
 
-<form class="form-horizontal" id="settings-form" method="post" action="/settings/update">
+<form class="form-horizontal" id="settings-form" method="post" action="{{baseDir}}/settings/update">
 
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
 
