--- a/views/subscription/partials/subscription-manage-address-form.hbs
+++ b/views/subscription/partials/subscription-manage-address-form.hbs
@@ -1,4 +1,4 @@
-<form id="main-form" method="post" action="/subscription/{{lcid}}/manage-address">
+<form id="main-form" method="post" action="{{baseDir}}/subscription/{{lcid}}/manage-address">
 
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="cid" value="{{cid}}">
