--- a/views/subscription/partials/subscription-subscribe-form.hbs
+++ b/views/subscription/partials/subscription-subscribe-form.hbs
@@ -1,11 +1,11 @@
 {{#if hasPubkey}}
-    <form method="post" id="download-pubkey" action="/subscription/publickey" style="display: none;">
+    <form method="post" id="download-pubkey" action="{{baseDir}}/subscription/publickey" style="display: none;">
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <input type="hidden" name="cid" value="{{cid}}">
     </form>
 {{/if}}
 
-<form id="main-form" method="post" action="/subscription/{{cid}}/subscribe">
+<form id="main-form" method="post" action="{{baseDir}}/subscription/{{cid}}/subscribe">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" class="tz-detect" name="tz" id="tz" value="{{tz}}">
     <input type="hidden" name="address" value="">
@@ -21,5 +21,5 @@
     document.getElementById('sub').value = new Date().getTime();
 </script>
 
-<script src="/moment/moment.min.js"></script>
-<script src="/moment/moment-timezone-with-data.min.js"></script>
+<script src="{{baseDir}}/moment/moment.min.js"></script>
+<script src="{{baseDir}}/moment/moment-timezone-with-data.min.js"></script>
