--- a/views/templates/create.hbs
+++ b/views/templates/create.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/templates/">{{#translate}}Templates{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/templates/">{{#translate}}Templates{{/translate}}</a></li>
     <li class="active">{{#translate}}Create Template{{/translate}}</li>
 </ol>
 
@@ -8,7 +8,7 @@
 
 <hr>
 
-<form class="form-horizontal" method="post" action="/templates/create">
+<form class="form-horizontal" method="post" action="{{baseDir}}/templates/create">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
 
     <div class="form-group">
