--- a/views/templates/edit.hbs
+++ b/views/templates/edit.hbs
@@ -1,24 +1,24 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/templates/">{{#translate}}Templates{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/templates/">{{#translate}}Templates{{/translate}}</a></li>
     <li class="active">{{#translate}}Edit Template{{/translate}}</li>
 </ol>
 
-<h2>{{#translate}}Edit Template{{/translate}} <a class="btn btn-default btn-xs" href="/templates/" role="button"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> {{#translate}}Back to templates{{/translate}}</a></h2>
+<h2>{{#translate}}Edit Template{{/translate}} <a class="btn btn-default btn-xs" href="{{baseDir}}/templates/" role="button"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> {{#translate}}Back to templates{{/translate}}</a></h2>
 
 <hr>
 
-<form method="post" class="delete-form" id="templates-delete" action="/templates/delete">
+<form method="post" class="delete-form" id="templates-delete" action="{{baseDir}}/templates/delete">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{id}}" />
 </form>
 
-<form method="post" class="duplicate-form" id="templates-duplicate" action="/templates/duplicate">
+<form method="post" class="duplicate-form" id="templates-duplicate" action="{{baseDir}}/templates/duplicate">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{id}}" />
 </form>
 
-<form class="form-horizontal" method="post" action="/templates/edit">
+<form class="form-horizontal" method="post" action="{{baseDir}}/templates/edit">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="id" value="{{id}}" />
 
