--- a/views/users/reset.hbs
+++ b/views/users/reset.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="/">{{#translate}}Home{{/translate}}</a></li>
-    <li><a href="/users/login">{{#translate}}Sign in{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/">{{#translate}}Home{{/translate}}</a></li>
+    <li><a href="{{baseDir}}/users/login">{{#translate}}Sign in{{/translate}}</a></li>
     <li class="active">{{#translate}}Password Reset{{/translate}}</li>
 </ol>
 
@@ -8,7 +8,7 @@
 
 <hr>
 
-<form class="form-horizontal" method="post" action="/users/reset">
+<form class="form-horizontal" method="post" action="{{baseDir}}/users/reset">
 
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <input type="hidden" name="username" value="{{username}}">
